--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,13 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Todo App</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
+
 <body>
-<div id="root"></div>
+<div id="root" class="container-fluid col-6"></div>
 
 </body>
 </html>
